--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,12 @@
 					  </svg>
 					</a> -->
 					<a class="ml-2 text-gray-500" href="https://aariftech.netlify.app/" target="_blank">
-					  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-						<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+					  <!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+						<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path> -->
+						<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+							<path d="M5 12h14"></path>
+							<path d="M12 5l7 7-7 7"></path>
+						  </svg>
 					  </svg>
 					</a>
 				  </span>
@@ -120,9 +124,9 @@
 			  </div>
 			  <div class="p-4 lg:w-1/2">
 				<div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-				  <img alt="ShaSank" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/logo.jpg">
+				  <img alt="Shasank" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/logo.jpg">
 				  <div class="flex-grow sm:pl-8">
-					<h2 class="title-font font-medium text-lg text-white">ShaSank</h2>
+					<h2 class="title-font font-medium text-lg text-white">Shasank</h2>
 					<h3 class="text-gray-500 mb-3">UI Developer</h3>
 					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
 					<span class="inline-flex">
@@ -195,9 +199,13 @@
 						</svg>
 					  </a> -->
 					  <a class="ml-2 text-gray-500" href="https://codewith-ankitjaiswal.netlify.app/" target="_blank">
-						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+						<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
 						  <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-						</svg>
+						</svg> -->
+						<svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+							<path d="M5 12h14"></path>
+							<path d="M12 5l7 7-7 7"></path>
+						  </svg>
 					  </a>
 					</span>
 				  </div>
@@ -205,9 +213,9 @@
 			  </div>
 			  <div class="p-4 lg:w-1/2">
 				<div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-				  <img alt="DivYansh" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/div.jpg">
+				  <img alt="Divyansh" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="media/div.jpg">
 				  <div class="flex-grow sm:pl-8">
-					<h2 class="title-font font-medium text-lg text-white">DivYansh</h2>
+					<h2 class="title-font font-medium text-lg text-white">Divyansh</h2>
 					<h3 class="text-gray-500 mb-3">UI Developer</h3>
 					<p class="mb-4">Worked in Collage Predictor, Laptop Predictor.</p>
 					<span class="inline-flex">
@@ -314,8 +322,12 @@
 					  </svg>
 					</a> -->
 					<a class="ml-2 text-gray-500" href="https://sujal.info/" target="_blank">
-					  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+					  <!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
 						<path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+					  </svg> -->
+					  <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path d="M5 12h14"></path>
+						<path d="M12 5l7 7-7 7"></path>
 					  </svg>
 					</a>
 				  </span>
