--- a/collage.pred.html
+++ b/collage.pred.html
@@ -30,28 +30,30 @@
 
 
 
-	  <section class="text-gray-400 bg-gray-900 body-font">
+	  <!-- <section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container px-5 py-24 mx-auto">
 		  <div class="flex flex-col text-center w-full mb-20">
-			<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Master Cleanse Reliac Heirloom</h1>
-			<p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom.</p>
+			<h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">COLLEGE PREDICTOR</h1>
+			<p class="lg:w-2/3 mx-auto leading-relaxed text-base">The College Predictor tool is designed to help students make informed decisions about their higher education. By inputting your academic data, including test scores, GPA, and extracurricular activities, our advanced algorithm analyzes historical admissions trends to predict which colleges are the best fit for you. Whether you’re aiming for your dream school or exploring new possibilities, our tool provides personalized insights to guide your college application process. Developed by our dedicated team, this project aims to empower students with the knowledge they need to succeed in their academic journeys. Try the College Predictor today and take the first step toward your future!
+
+			</p>
 		  </div>
 		  <div class="flex flex-wrap -m-4">
 			<div class="lg:w-1/3 sm:w-1/2 p-4">
 			  <div class="flex relative">
-				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/600x360">
+				<img alt="Screensot showing DESCLAMIER" class="absolute inset-0 w-full h-full object-cover object-center" src="media/cps (1).jpeg">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
-				  <h1 class="title-font text-lg font-medium text-white mb-3">Shooting Stars</h1>
-				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
+				  <h1 class="title-font text-lg font-medium text-white mb-3">Disclaimer</h1>
+				  <p class="leading-relaxed">College Predictor ULTRA covers multiple counseling processes using JEE ranks, Copyright protected.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="lg:w-1/3 sm:w-1/2 p-4">
 			  <div class="flex relative">
-				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/601x361">
+				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="media/cps (2).png">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
 				  <h1 class="title-font text-lg font-medium text-white mb-3">The Catalyzer</h1>
 				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
 				</div>
@@ -61,7 +63,7 @@
 			  <div class="flex relative">
 				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/603x363">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
 				  <h1 class="title-font text-lg font-medium text-white mb-3">The 400 Blows</h1>
 				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
 				</div>
@@ -71,7 +73,7 @@
 			  <div class="flex relative">
 				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/602x362">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
 				  <h1 class="title-font text-lg font-medium text-white mb-3">Neptune</h1>
 				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
 				</div>
@@ -81,7 +83,7 @@
 			  <div class="flex relative">
 				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/605x365">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
 				  <h1 class="title-font text-lg font-medium text-white mb-3">Holden Caulfield</h1>
 				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
 				</div>
@@ -91,11 +93,32 @@
 			  <div class="flex relative">
 				<img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="https://dummyimage.com/606x366">
 				<div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">THE SUBTITLE</h2>
+				  <h2 class="tracking-widest text-sm title-font font-medium text-green-400 mb-1">COLLEGE PREDICTOR ULTRA</h2>
 				  <h1 class="title-font text-lg font-medium text-white mb-3">Alper Kamu</h1>
 				  <p class="leading-relaxed">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
 				</div>
 			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section> -->
+
+
+
+
+	  <section class="text-gray-400 bg-gray-900 body-font">
+		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
+			<img class="object-cover object-center rounded" alt="hero" src="media/cps (2).png">
+		  </div>
+		  <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">COLLEGE PREDICTOR
+			  <!-- <br class="hidden lg:inline-block">PREDICTOR -->
+			</h1>
+			<p class="mb-8 leading-relaxed">The College Predictor tool helps students make informed decisions by analyzing academic data and historical admissions trends. It provides personalized insights to guide college applications, empowering students to succeed in their academic journeys. Try it today!</p>
+			<div class="flex justify-center">
+			  <button onclick="tryNow()" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg" >Try Now..!!</button>
+			  <button onclick="showDemo()" class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Demo</button>
 			</div>
 		  </div>
 		</div>
@@ -113,13 +136,17 @@
 			<div class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-green-500 text-white relative z-10 title-font font-medium text-sm">1</div>
 			<div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
 			  <div class="flex-shrink-0 w-24 h-24 bg-gray-800 text-green-400 rounded-full inline-flex items-center justify-center">
-				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
+				<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
 				  <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-				</svg>
+				</svg> -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-pdf w-12 h-12" viewBox="0 0 16 16">
+					<path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
+					<path d="M4.603 14.087a.8.8 0 0 1-.438-.42c-.195-.388-.13-.776.08-1.102.198-.307.526-.568.897-.787a7.7 7.7 0 0 1 1.482-.645 20 20 0 0 0 1.062-2.227 7.3 7.3 0 0 1-.43-1.295c-.086-.4-.119-.796-.046-1.136.075-.354.274-.672.65-.823.192-.077.4-.12.602-.077a.7.7 0 0 1 .477.365c.088.164.12.356.127.538.007.188-.012.396-.047.614-.084.51-.27 1.134-.52 1.794a11 11 0 0 0 .98 1.686 5.8 5.8 0 0 1 1.334.05c.364.066.734.195.96.465.12.144.193.32.2.518.007.192-.047.382-.138.563a1.04 1.04 0 0 1-.354.416.86.86 0 0 1-.51.138c-.331-.014-.654-.196-.933-.417a5.7 5.7 0 0 1-.911-.95 11.7 11.7 0 0 0-1.997.406 11.3 11.3 0 0 1-1.02 1.51c-.292.35-.609.656-.927.787a.8.8 0 0 1-.58.029m1.379-1.901q-.25.115-.459.238c-.328.194-.541.383-.647.547-.094.145-.096.25-.04.361q.016.032.026.044l.035-.012c.137-.056.355-.235.635-.572a8 8 0 0 0 .45-.606m1.64-1.33a13 13 0 0 1 1.01-.193 12 12 0 0 1-.51-.858 21 21 0 0 1-.5 1.05zm2.446.45q.226.245.435.41c.24.19.407.253.498.256a.1.1 0 0 0 .07-.015.3.3 0 0 0 .094-.125.44.44 0 0 0 .059-.2.1.1 0 0 0-.026-.063c-.052-.062-.2-.152-.518-.209a4 4 0 0 0-.612-.053zM8.078 7.8a7 7 0 0 0 .2-.828q.046-.282.038-.465a.6.6 0 0 0-.032-.198.5.5 0 0 0-.145.04c-.087.035-.158.106-.196.283-.04.192-.03.469.046.822q.036.167.09.346z"/>
+				  </svg>
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-				<h2 class="font-medium title-font text-white mb-1 text-xl">Shooting Stars</h2>
-				<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				<h2 class="font-medium title-font text-white mb-1 text-xl">Finding CRL</h2>
+				<p class="leading-relaxed">Check your Rank from your examination score card.</p>
 			  </div>
 			</div>
 		  </div>
@@ -130,13 +157,16 @@
 			<div class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-green-500 text-white relative z-10 title-font font-medium text-sm">2</div>
 			<div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
 			  <div class="flex-shrink-0 w-24 h-24 bg-gray-800 text-green-400 rounded-full inline-flex items-center justify-center">
-				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
+				<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
 				  <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-				</svg>
+				</svg> -->
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle w-12 h-12" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+				  </svg>
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-				<h2 class="font-medium title-font text-white mb-1 text-xl">The Catalyzer</h2>
-				<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				<h2 class="font-medium title-font text-white mb-1 text-xl">Opening Tool</h2>
+				<p class="leading-relaxed">Scroll above and Click "Try Now..!!"" Button. You are in a new tab with the tool open.</p>
 			  </div>
 			</div>
 		  </div>
@@ -147,14 +177,14 @@
 			<div class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-green-500 text-white relative z-10 title-font font-medium text-sm">3</div>
 			<div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
 			  <div class="flex-shrink-0 w-24 h-24 bg-gray-800 text-green-400 rounded-full inline-flex items-center justify-center">
-				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
-				  <circle cx="12" cy="5" r="3"></circle>
-				  <path d="M12 22V8M5 12H2a10 10 0 0020 0h-3"></path>
-				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right w-12 h-12" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+					<path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+				  </svg>
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-				<h2 class="font-medium title-font text-white mb-1 text-xl">The 400 Blows</h2>
-				<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				<h2 class="font-medium title-font text-white mb-1 text-xl">Entering Details</h2>
+				<p class="leading-relaxed">Enter your CRL or Category Rank, Category, Branch, Home State, Gender, College Type.</p>
 			  </div>
 			</div>
 		  </div>
@@ -165,14 +195,14 @@
 			<div class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-green-500 text-white relative z-10 title-font font-medium text-sm">4</div>
 			<div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
 			  <div class="flex-shrink-0 w-24 h-24 bg-gray-800 text-green-400 rounded-full inline-flex items-center justify-center">
-				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
-				  <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-				  <circle cx="12" cy="7" r="4"></circle>
-				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer h-12 w-12" viewBox="0 0 16 16">
+					<path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/>
+					<path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1"/>
+				  </svg>
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-				<h2 class="font-medium title-font text-white mb-1 text-xl">Neptune</h2>
-				<p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
+				<h2 class="font-medium title-font text-white mb-1 text-xl">Collecting Details</h2>
+				<p class="leading-relaxed">Now you can see your elligible collages based on 2023 data. Print it, take screenshot, note it, It's Completely Yours</p>
 			  </div>
 			</div>
 		  </div>
@@ -439,5 +469,17 @@
 		  </span>
 		</div>
 	  </footer>
+
+	  <script>
+		function tryNow() {
+		  window.open('https://college-predictor.netlify.app', '_blank');
+		}
+	  
+		function showDemo() {
+		  window.open('https://youtu.be/yvD0_yVpga0', '_blank'); // Replace with the actual demo section URL if necessary
+		}
+	  </script>
+	  
+	  
 </body>
 </html>
