--- a/collage.pred.html
+++ b/collage.pred.html
@@ -416,7 +416,7 @@
 				<circle cx="12" cy="7" r="4"></circle>
 			  </svg>
 			</div> -->
-			<div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
+			<div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-800 sm:flex-row flex-col">
 			  <h2 class="text-white text-lg title-font font-medium mb-2">Is Personal Info Required?</h2>
 			  <p class="leading-relaxed text-base">No, Neither It Require Any Personal Information Nor It Save Any User Data From User.</p>
 			  <!-- <a class="mt-3 text-green-400 inline-flex items-center">Learn More
@@ -425,9 +425,9 @@
 				</svg>
 			  </a> -->
 			</div>
-			<div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
+			<div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-800 sm:flex-row flex-col">
 				<h2 class="text-white text-lg title-font font-medium mb-2"><br>How accurate is the predictor tool?</h2>
-				<p class="leading-relaxed text-base">The accuracy of the predictor tool depends on the data it's built upon and the algorithm used. While it can provide a good estimation, it's important to remember that actual results may vary.</p>
+				<p class="leading-relaxed text-base">The accuracy of the predictor tool depends on the data it's built upon and the algorithm used.</p>
 				<!-- <a class="mt-3 text-green-400 inline-flex items-center">Learn More
 				  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
 					<path d="M5 12h14M12 5l7 7-7 7"></path>
